PMD 7.7.0 and fix existing pmd issues (#403)
Co-authored-by: monaullah <monaullah98@gmail.com>