@@ -33,13 +33,12 @@ import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
 import software.amazon.awssdk.services.s3.model.S3Exception;
 
-public class DeletePersistedIndexDocumentHandlerTest {
+class DeletePersistedIndexDocumentHandlerTest {
 
     public static final String PERSISTED_NVI_CANDIDATES_FOLDER = "nvi-candidates";
     private static final Environment ENVIRONMENT = new Environment();
     private static final String EXPANDED_RESOURCES_BUCKET = "EXPANDED_RESOURCES_BUCKET";
     private static final String BUCKET_NAME = ENVIRONMENT.readEnv(EXPANDED_RESOURCES_BUCKET);
-    private S3Client s3Client;
     private DeletePersistedIndexDocumentHandler handler;
     private S3Driver s3Driver;
     private FakeSqsClient sqsClient;
@@ -47,10 +46,10 @@ public class DeletePersistedIndexDocumentHandlerTest {
     @BeforeEach
     void setUp() {
         sqsClient = new FakeSqsClient();
-        s3Client = new FakeS3Client();
+        var s3Client = new FakeS3Client();
         s3Driver = new S3Driver(s3Client, BUCKET_NAME);
-        handler = new DeletePersistedIndexDocumentHandler(new S3StorageWriter(s3Client, BUCKET_NAME), sqsClient,
-                                                          new Environment());
+        handler = new DeletePersistedIndexDocumentHandler(new S3StorageWriter(s3Client, BUCKET_NAME),
+                                                          sqsClient, new Environment());
     }
 
     @Test
@@ -103,7 +102,7 @@ public class DeletePersistedIndexDocumentHandlerTest {
 
     @Test
     void shouldSendMessageToDqlWhenFailingToExtractIdentifierFromRecord() {
-        var event = createEvent(randomDynamoDbEvent().getRecords().get(0));
+        var event = createEvent(randomDynamoDbEvent().getRecords().getFirst());
         handler.handleRequest(event, null);
         assertEquals(1, sqsClient.getSentMessages().size());
     }
@@ -113,8 +112,8 @@ public class DeletePersistedIndexDocumentHandlerTest {
         var daoToSucceed = randomCandidateDao();
         setUpExistingDocumentInS3(daoToSucceed);
         var streamRecord = DynamoDbTestUtils.eventWithCandidate(daoToSucceed, daoToSucceed, OperationType.REMOVE)
-                               .getRecords().get(0);
-        var event = createEventWithDynamodbRecords(List.of(randomDynamoDbEvent().getRecords().get(0), streamRecord));
+                               .getRecords().getFirst();
+        var event = createEventWithDynamodbRecords(List.of(randomDynamoDbEvent().getRecords().getFirst(), streamRecord));
         handler.handleRequest(event, null);
         assertEquals(0, s3Driver.listAllFiles(UnixPath.fromString(PERSISTED_NVI_CANDIDATES_FOLDER)).size());
     }
@@ -132,7 +131,7 @@ public class DeletePersistedIndexDocumentHandlerTest {
     }
 
     private S3Client setupFailingS3Client(UUID identifier) {
-        s3Client = mock(FakeS3Client.class);
+        var s3Client = mock(FakeS3Client.class);
         when(s3Client.deleteObject(eq(getDeleteObjectRequest(identifier)))).thenThrow(S3Exception.class);
         return s3Client;
     }
